--- a/sendEmail/applications/app-service/src/main/resources/application.yaml
+++ b/sendEmail/applications/app-service/src/main/resources/application.yaml
@@ -12,8 +12,8 @@ spring:
 mailSend:
   host: "smtp.gmail.com"
   port: 587
-  username: "alcaldiacucutatramites@gmail.com"
-  password: "ntqrcvkwraxlnbqw"
+  username: "arquitech2023@gmail.com"
+  password: "haxjqvjgrvvfwdyz"
   starttls.enable: true
   smtp.auth: true
   include: null
